--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -37,7 +37,7 @@
 
 	<servlet-mapping>
 		<servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
 
 </web-app>
