cms api mapping
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@3456 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -35,11 +35,9 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-    <!--
 	<servlet-mapping>
 		<servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
-		<url-pattern>*.html</url-pattern>
+		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
-    -->
 
 </web-app>
