Added modified javascript for perfect scrollbar for portal-manage.html.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5067 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ javascripts/v3/domready.portal.store.js.LOCAL.2308.js
 javascripts/v3/domready.portal.store.js.REMOTE.2308.js
 javascripts/v3/domready.portal.store.js.orig
 javascripts/v3/func.portal.store.js.orig
+javascripts/v3/domready.portal.manage.js.orig
+javascripts/v3/func.portal.manage.js.BACKUP.17644.js
+javascripts/v3/func.portal.manage.js.BACKUP.17914.js
+javascripts/v3/func.portal.manage.js.BASE.17644.js
+javascripts/v3/func.portal.manage.js.BASE.17914.js
+javascripts/v3/func.portal.manage.js.LOCAL.17644.js
+javascripts/v3/func.portal.manage.js.LOCAL.17914.js
+javascripts/v3/func.portal.manage.js.REMOTE.17644.js
+javascripts/v3/func.portal.manage.js.REMOTE.17914.js
