--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ javascripts/v3/func.portal.manage.js.LOCAL.17644.js
 javascripts/v3/func.portal.manage.js.LOCAL.17914.js
 javascripts/v3/func.portal.manage.js.REMOTE.17644.js
 javascripts/v3/func.portal.manage.js.REMOTE.17914.js
+portal-manage.html.orig
