Decoupled epcurate-curation.html css and javascript. Revised epcurate-curation.html style. Added margin top option for perfect-scrollbar plugin. Added respond.min.js plugin. Revised perfect scrollbar positioning in channel-add, portal-manage and store-manage.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5135 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ javascripts/v3/func.portal.manage.js.LOCAL.17914.js
 javascripts/v3/func.portal.manage.js.REMOTE.17644.js
 javascripts/v3/func.portal.manage.js.REMOTE.17914.js
 portal-manage.html.orig
+_gsdata_
