--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ javascripts/v3/func.portal.manage.js.REMOTE.17644.js
 javascripts/v3/func.portal.manage.js.REMOTE.17914.js
 portal-manage.html.orig
 _gsdata_
+sftp-config.json
